// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration Files > generateHonoClient > should match snapshot > getHonoClient 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return 'http://localhost:3000'
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files > getHonoClient for @astrojs/cloudflare > should generate client with default port (3000) > @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files > getHonoClient for @astrojs/netlify > should generate client with default port (3000) > @astrojs/netlify 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files > getHonoClient for @astrojs/node > should generate client with default port (3000) > @astrojs/node 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files > getHonoClient for @astrojs/vercel > should generate client with default port (3000) > @astrojs/vercel 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files generateHonoClient should match snapshot: getHonoClient 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return 'http://localhost:3000'
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files getHonoClient for @astrojs/cloudflare should generate client with default port (3000): @astrojs/cloudflare 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files getHonoClient for @astrojs/netlify should generate client with default port (3000): @astrojs/netlify 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files getHonoClient for @astrojs/node should generate client with default port (3000): @astrojs/node 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;

exports[`Integration Files getHonoClient for @astrojs/vercel should generate client with default port (3000): @astrojs/vercel 1`] = `
"
// Generated by Hono Actions Integration
import type { HonoRouter } from './router.js'
import { hc, parseResponse } from 'hono/client'
import type { DetailedError, ClientRequestOptions } from 'hono/client'

function getBaseUrl() {
    // client side can just use the base path
    if (typeof window !== 'undefined') {
        return '/'
    }

    // dev server (dev server) needs to know the port
    if (import.meta.env.DEV) {
        return \`http://localhost:\${3000}\`
    }

    // server side (production) needs full url
    return import.meta.env.SITE ?? ''
}

export { parseResponse, hc as createHonoClient}
export type { DetailedError, ClientRequestOptions }
/**
 * Default hono client using the base url from the environment
 * **Note** if running in production, the \`siteUrl\` option from the astro config will be used.
 * If customization is needed, use the \`createHonoClient\` function instead.
 */
export const honoClient = createHonoClient<HonoRouter>(getBaseUrl())
"
`;
